tests/baselines/reference/superCallAssignResult.errors.txt
tests/cases/compiler/superCallAssignResult.ts(7,17): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'E'.
tests/cases/compiler/superCallAssignResult.ts(8,9): error TS2322: Type 'number' is not assignable to type 'void'.


==== tests/cases/compiler/superCallAssignResult.ts (2 errors) ====
    class E {
        constructor(arg: any) { }
    }
    
    class H extends E {
        constructor() {
            var x = super(5); // Should be of type void, not E.
                    ~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'E'.
            x = 5;
            ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
        }
    }